fix(user_authorized): change HTML tags in msgs

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -77,11 +77,11 @@
             "i_wanna_sleep": "Please do not forget that he is also a human being, and periodically sleeps (although in fact extremely rarely)",
             "return_to_settings": "<i>Returning to the settings</i>",
             "go_settings_chatgpt": "<i>Going to the ChatGPT mode settings</i>",
-            "settings_chatgpt_info": "💥 <b>When this mode is enabled, I will consciously respond to any of your messages using the full power of the ChatGPT neural network!",
+            "settings_chatgpt_info": "💥 When this mode is enabled, I will consciously respond to any of your messages using the full power of the ChatGPT neural network!",
             "chatgpt_on": "<b>ChatGPT mode is enabled for the bot</b>",
             "chatgpt_off": "<b>ChatGPT mode is disabled for the bot</b>",
             "go_settings_notifications": "<i>Going to the notification settings</i>",
-            "settings_notifications_info": "<b>In this menu, you can configure receiving notifications about the imminent expiration of your subscription!",
+            "settings_notifications_info": "In this menu, you can configure receiving notifications about the imminent expiration of your subscription!",
             "1d_on": "<b>Sending a notification 1 day before the subscription expiration date is enabled</b>",
             "1d_off": "<b>Sending a notification 1 day before the subscription expiration date is disabled</b>",
             "3d_on": "<b>Sending a notification 3 days before the subscription expiration date is enabled</b>",
