--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -77,11 +77,11 @@
             "i_wanna_sleep": "Пожалуйста, не забывайте, что он тоже человек, и периодически спит (хотя на самом деле крайне редко) 😅",
             "return_to_settings": "<i>Возвращаю в меню настроек</i>",
             "go_settings_chatgpt": "<i>Перехожу в настройки режима ChatGPT</i>",
-            "settings_chatgpt_info": "💥 <b>При включении данного режима я буду осознанно отвечать на любые Ваши сообщения, используя всю мощь нейросети ChatGPT!",
+            "settings_chatgpt_info": "💥 При включении данного режима я стану осознанно отвечать на любые Ваши сообщения, используя всю мощь нейросети ChatGPT!",
             "chatgpt_on": "<b>Режим ChatGPT для бота включен</b>",
             "chatgpt_off": "<b>Режим ChatGPT для бота выключен</b>",
             "go_settings_notifications": "<i>Перехожу в настройки уведомлений</i>",
-            "settings_notifications_info": "<b>В данном меню Вы можете настроить получение уведомлений о скором истечении срока действия подписки!",
+            "settings_notifications_info": "Здесь Вы можете настроить получение уведомлений о скором истечении срока действия подписки",
             "1d_on": "<b>Отправка уведомления за 1 день до срока окончания подписки включена</b>",
             "1d_off": "<b>Отправка уведомления за 1 день до срока окончания подписки выключена</b>",
             "3d_on": "<b>Отправка уведомления за 3 дня до срока окончания подписки включена</b>",
@@ -155,7 +155,7 @@
             "3d_on": "Включить за 3 дня",
             "7d_off": "Выключить за 7 дней",
             "7d_on": "Включить за 7 дней",
-            "return_to_settings": "Обратно",
+            "return_to_settings": "Обратно в настройки",
             "chatgpt_off": "Выключить",
             "chatgpt_on": "Включить",
             "installation_instruction": "Инструкция по установке"
