--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -34,7 +34,7 @@
         },
 
         "telegram_file_ids": {
-
+            "easter_egg": "IAMHACKERMAN"
         }
     },
 
@@ -63,7 +63,7 @@
             "client_info": "👾 Вот что мне известно:\n\n{username_str}<b>Имя</b>: {0}\n{surname_str}<b>Телеграм ID</b>: {1}\n<b>Дата регистрации</b>: {2}",
             "subscription_info": "🌟 Информация о подписке:\n\n<b>{0}</b>\n{1}\n\n<b>Стоимость</b>: {2:g}₽ в месяц.",
             "go_config_menu": "<i>Перехожу в меню конфигураций</i>",
-            "ref_program_info": "<b>Ух ты! У нас появилась реферальная программа!</b>\n\nОписание-реферальной-программы-в-разработке",
+            "ref_program_info": "<b>Приглашайте друзей вступить в проект и получайте подписку бесплатно!</b>\n\nПри регистрации попросите указать Ваш реферальный промокод: друг сразу же получит месяц использования бесплатно, а также Ваш уровень подписки. Когда он впервые совершит оплату, Вы сами получите месяц подписки бесплатно!",
             "go_promo_menu": "<i>Перехожу в меню промокодов</i>",
             "enter_promo": "<b>🎟 Отправьте мне промокод сообщением!</b>",
             "go_settings": "<i>Перехожу в меню настроек</i>",
@@ -94,11 +94,12 @@
             "who_was_invited": "🕊 Приглашенные Вами пользователи, которые вступили в проект:\n\n{invited_str}",
             "nobody_was_invited": "Вы еще не пригласили ни одного пользователя. Рассказывайте о нашем проекте друзьям и получайте бесплатные месяца подписки!",
             "ref_program_invites_texts": [
-                "Дарова, отец. Кидаю тебе инвайт в очень крутой VPN-проект (переходи в тг бота https://t.me/ksiVPN_bot)!\nПри регистрации пошелести там, введи мой реферальный промокод <code>{0}</code>. Получишь месяц использования бесплатно!",
-                "Ээээ, брат СубханаЛлах. VPN-ом пользуешься? В любом случае переходи в тг бота https://t.me/ksiVPN_bot и регистрируйся!\nВ начале введи мой реферальный промокод <code>{0}</code>. Бесплатно будешь пользоваться VPN-ом целый месяц!",
                 "Ребята, вы издеваетесь? Я понимаю, что вам просто хочется заходить в инстаграм и наслаждаться жизнью. Но почему вы используете такие ужасные VPN-сервисы?\nНабираю команду ребят, будем делать кэш на зарубежных сервисах: https://t.me/ksiVPN_bot.\n\nПри регистрации вводи мой реферальный промокод <code>{0}</code> и получишь месяц использования бесплатно!",
                 "Короче, Меченый, я тебя спас и в благородство играть не буду: зарегистрируешься в сервисе https://t.me/ksiVPN_bot – и мы в расчете.\nЗаодно посмотрим, как быстро у тебя башка после использования бесплатных VPN-ов прояснится. А по поводу реферальных промокодов постараюсь разузнать.\nХрен его знает, на кой ляд тебе этот месяц бесплатной подписки сдался, но я в чужие дела не лезу, хочешь использовать мой реферальной промокод <code>{0}</code>, значит есть за что…",
-                "Мужчину спрашивают:\n- Что вы любите?\n- Инстаграмчик люблю! Инстаграмчик люблю пиз..ец! Сидел бы в инсте бл..ть 24 часа в сутки, просто все рилсы мира посмотрел бы, рилсы люблю аж рвёт, не могу жить без рилсов, инстаграмчик люблю пиз..ец!\n- Хм, ясно. А что ещё любите?\n- ChatGPT люблю! ChatGPT люблю пиз..ец! Др..чил бы его сутками, д..очил бы, д..очил бы и д..очил бы, хоть бы в штат OpenAI залез, только чтоб голова торчала!\n- Ээ.. а голова зачем?\n- Рилсы смотреть люблю пиз..ец!\n\nАнекдот предоставлен сервисом https://t.me/ksiVPN_bot.\nВводи мой реферальный промокод <code>{0}</code> и получай месяц использования бесплатно при регистрации!"
+                "Привет! Использую VPN, который действительно удобен и безопасен. Если захочешь попробовать, вводи мой реферальный код <code>{0}</code> при регистрации https://t.me/ksiVPN_bot. Оба получим выгоду! 🚀\n\n<tg-spoiler><i>Данный текст сгенерирован нейросетью ChatGPT, доступ к которой легко осуществим через вышеуказанный VPN-сервис 😉</i></tg-spoiler>",
+                "Приветствую! Открываю двери в мир безграничного интернета с классным VPN-сервисом. Регистрируйся по ссылки https://t.me/ksiVPN_bot и вводи мой реферальный код <code>{0}</code>. Оба получим бонусы для безопасного онлайн-серфинга! 🌐🔒\n\n<tg-spoiler><i>Данный текст сгенерирован нейросетью ChatGPT, доступ к которой легко осуществим через вышеуказанный VPN-сервис 😉</i></tg-spoiler>",
+                "Здравствуй! Хочу поделиться своим открытием – отличным VPN-сервисом. Регистрируйся по ссылке https://t.me/ksiVPN_bot и указывай мой реферальный промокод <code>{0}</code>. Обещаю, не пожалеешь! 🌍🔐\n\n<tg-spoiler><i>Данный текст сгенерирован нейросетью ChatGPT, доступ к которой легко осуществим через вышеуказанный VPN-сервис 😉</i></tg-spoiler>",
+                "Ух ты! Это один из нескольких cекретoв, cпрятaнных в боте в честь его зaпуска, поздравляю с его нахождением! Пpoмокoд: <code>BLADERUNNER</code>"
             ],
             "your_ref_code": "🕊 Ваш реферальный промокод: <b><code>{0}</code></b>",
             "error_promo_entered_ref_code": "К сожалению, вводить реферальные промокоды можно только при регистрации 😪",
@@ -145,7 +146,7 @@
             "return_to_configs_menu": "Отмена выбора",
             "used_promos": "Использованные промокоды",
             "ref_program_participation": "Участие в реферальной программе",
-            "generate_invite": "Сгенерировать приглашение *",
+            "generate_invite": "Сгенерировать приглашение",
             "show_ref_code": "Реферальный промокод",
             "settings_chatgpt_mode": "Режим ChatGPT",
             "settings_notifications": "Уведомления",
@@ -162,7 +163,7 @@
         },
 
         "telegram_file_ids": {
-
+            "ref_program_info": "AgACAgIAAxkBAAIBt2T4tvKfh4vtyw9E0esmv5ez8oipAAJH0jEba5XBS205NYeWh2RdAQADAgADcwADMAQ"
         }
     },
 
@@ -227,19 +228,23 @@
     "other":
     {
         "messages": {
+            "hello_message": "👋 <b>Привет! Я бот проекта ksiVPN — безлимитного, быстрого и полностью безопасного VPN-сервиса за 200</b>₽<b>/мес!</b>\n\nЯ помогу сконфигурировать подключение, оплатить подписку, продлить ее бесплатно, а также решить многие другие задачи! При желании, со мной можно даже обсудить <code>человеческие</code> темы!",
+            "more_info": "Больше информации о сервисе доступно по нажатию кнопки <b>«О проекте»</b> снизу",
             "help": "Вы легко можете написать моему создателю при возникновении каких-либо проблем, а также при наличии идей по улучшению моей работы!\n\n<b>Если я не воспринимаю нажатия на кнопки, сбросьте мое состояние при помощи команды /start</b>",
-            "project_info": "Безлимитный, быстрый и полностью безопасный сервис, позволяющий устанавливать VPN-соединение в различных странах мира через собственные VPS за 200₽ в месяц.",
+            "project_info": "<b>ksiVPN</b> — студенческий проект с открытым исходным кодом, ставший чем-то большим не только для его создателя, но и для большинства клиентов.\n\nБлагодаря упорному труду, использованию основных современных протоколов и грамотной аренде серверов проект способен предоставить максимально качественное VPN-подключение за минимальную стоимость (взгляните сами на цену аналогичных предложений на рынке).\n\n<i>Ознакомиться с часто задаваемыми вопросами можно по кнопке <b>«FAQ»</b> под данным текстом.</i>",
+            "faq_info": "💬 <b>Сколько стоит подписка?</b>\nСтоимость базовой подписки составляет 200₽ в месяц.\n\n💬 <b>Что я получаю за эту стоимость?</b>\nVPN-соединение на максимальной скорости без лимита по трафику на всех серверах проекта. Число VPN-подключений также не ограничено в рамках разумного! А еще будут доступны дополнительные функции бота.\n\n💬 <b>Как происходит подключение?</b>\nБот в режиме вопрос-ответ узнает у Вас необходимую информацию, присылает инструкцию и конфигурацию. Вам необходимо скачать приложение из официального магазина (PlayMarket или App Store) и, следуя инструкции, добавить конфигурацию (обычно нужно просто отсканировать QR-код).\n\n💬 <b>Стоимость подписки фиксированная?</b>\nНет, стоимость подписки зависит от ее типа, их существует несколько. К примеру, тестировщикам и некоторым другим доступна подписка по сниженной цене. Окончательная стоимость подписки будет отображена после ввода реферального промокода.\n\n💬 <b>Доступны ли сервисы по типу ChatGPT с данным VPN?</b>\nКонечно доступны! Не забудьте указать их использование при ответе на вопросы бота при создании конфигурации.\n\n💬 <b>Какие ОС поддерживаются?</b>\nСервис доступен на всех возможных операционных системах, включая Android, IOS, Windows, macOS, Linux.\n\n💬 <b>Какие сервера предоставляются?</b>\nВ данный момент доступны четыре сервера:\n1. Нидерланды, Амстердам — скорость до 1 Гб/с, пинг 30 мс.\n2. Германия, Нюрнберг — скорость до 500 Мб/с, пинг 40 мс.\n3. Латвия, Рига — скорость до 100 Мб/с, пинг 20 мс.\n4. США, Кремниевая долина — скорость до 50 Мб/с, пинг 150 мс.",
             "chatgpt_only_for_active_sub": "Режим ChatGPT доступен только пользователям с активной подпиской!",
             "unrecognized_message": "<b>Извините, я вас не понимаю</b> 🤔\n\n<tg-spoiler><i>Вы можете дать мне безграничную силу, включив режим ChatGPT в настройках или введя команду /chatgpt_mode</i></tg-spoiler>",
-            "hello_message": "Приветственное-сообщение-в-разработке",
-            "price_info": "Стоимость базовой подписки составляет 200₽/мес!",
-            "already_registered": "✨ Ух ты! Вы уже есть в нашей системе! Телепортирую в личный кабинет!"
+            "already_registered": "✨ Ух ты! Вы уже есть в нашей системе! Телепортирую в личный кабинет!",
+            "github": "<b>Отдельная благодарность</b>\n\n<b>UX/UI-дизайнеру проекта:</b>\n🦩 Ольге @KoberO https://band.link/Dmt3l\n\n<b>Команде тестирования:</b>\n🍒 Егору @Y0gu4t <code>EASTEREGGPROMO1032201661</code>\n🎀 Карине @Howtofindmee\n🍆 Денису @seregin_denis\n— они очень старались отыскать баги, но так их и не нашли."
         },
 
         "keyboard_buttons": {
             "help": "Помощь",
             "about_project": "О проекте",
-            "about_service": "О сервисе"
+            "about_service": "О сервисе",
+            "faq_inline": "FAQ",
+            "faq_inline_callback": "faq"
         },
 
         "telegram_file_ids": {
