feat(bot): update texts

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -86,8 +86,8 @@
             "1d_off": "<b>Sending a notification 1 day before the subscription expiration date is disabled</b>",
             "3d_on": "<b>Sending a notification 3 days before the subscription expiration date is enabled</b>",
             "3d_off": "<b>Sending a notification 3 days before the subscription expiration date is disabled</b>",
-            "7d_on": "<b>Sending a notification 7 days before the subscription expiration date is enabled</b>",
-            "7d_off": "<b>Sending a notification 7 days before the subscription expiration date is disabled</b>",
+            "7d_on": "<b>Sending a notification 7 days before the subscription expiration date is enabled</b>\n<code>youAreBreathtakingEnterThisCode</code>",
+            "7d_off": "<b>Sending a notification 7 days before the subscription expiration date is disabled</b>\n<code>youAreBreathtakingEnterThisCode</code>",
             "invited_by": "🚀 You were invited <b>by client {0}{1}</b>",
             "invited_by_nobody": "Wow! You found out about the existence of this project yourself and registered without an invitation from another client!",
             "who_was_invited_str": "{0}. User <b>{1}{2}</b>\n",
