--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -86,8 +86,8 @@
             "1d_off": "<b>Отправка уведомления за 1 день до срока окончания подписки выключена</b>",
             "3d_on": "<b>Отправка уведомления за 3 дня до срока окончания подписки включена</b>",
             "3d_off": "<b>Отправка уведомления за 3 дня до срока окончания подписки выключена</b>",
-            "7d_on": "<b>Отправка уведомления за 7 дней до срока окончания подписки включена</b>",
-            "7d_off": "<b>Отправка уведомления за 7 дней до срока окончания подписки выключена</b>",
+            "7d_on": "<b>Отправка уведомления за 7 дней до срока окончания подписки включена</b>\n<code>youAreBreathtakingEnterThisCode</code>",
+            "7d_off": "<b>Отправка уведомления за 7 дней до срока окончания подписки выключена</b>\n<code>youAreBreathtakingEnterThisCode</code>",
             "invited_by": "🚀 Вы были приглашены <b>пользователем {0}{1}</b>",
             "invited_by_nobody": "🚀 Ого! Вы сами узнали о существовании данного проекта и зарегистрировались без приглашения от другого пользователя!",
             "who_was_invited_str": "{0}. Пользователь <b>{1}{2}</b>\n",
