feat(localization): add middleware texts

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -347,5 +347,23 @@
         "telegram_file_ids": {
 
         }
+    },
+
+    "middlewares":
+    {
+        "messages": {
+            "authorized_only": "👾 Упс! Эта функция доступна только зарегистрированным пользователям!",
+            "unauthorized_only": "Вы уже зарегистрировались!",
+            "admin_only": "👾 Ой-ой! Эта функция доступна только администратору!",
+            "antiflood": "🤖 Пожалуйста, не спамьте запросами!"
+        },
+
+        "keyboard_buttons": {
+
+        },
+
+        "telegram_file_ids": {
+
+        }
     }
 }
