--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -347,5 +347,23 @@
         "telegram_file_ids": {
 
         }
+    },
+
+    "middlewares":
+    {
+        "messages": {
+            "authorized_only": "👾 Oops! This feature is only available to registered users!",
+            "unauthorized_only": "You have already registered!",
+            "admin_only": "👾 Oh, oh! This function is only available to the administrator!",
+            "antiflood": "🤖 Please do not spam with requests!"
+        },
+
+        "keyboard_buttons": {
+
+        },
+
+        "telegram_file_ids": {
+
+        }
     }
 }
