--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -345,7 +345,7 @@
         },
 
         "telegram_file_ids": {
-
+            "template_image_url": "https://github.com/exmanka/ksiVPN-telegram-bot/assets/74555362/38b4bf5b-bfa8-4904-b8e8-4c492c4eb872"
         }
     },
 
