--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -13,7 +13,7 @@
             "ref_promo_accepted": "✨ Ух ты! Принят промокод от <b>пользователя {0}</b>, дающий <b>{1} дней</b> бесплатной подписки!",
             "sub_info": "🌟 Подключена <b>{0}</b> со <b>стоимостью {1:g}</b>₽ в месяц.",
             "invalid_promo": "Такого промокода нет! Попробуйте ввести его еще раз",
-            "need_renew_sub": "❗️ <b>Чтобы получить конфигурацию, Вам необходимо продлить подписку!</b>"
+            "need_renew_sub": "❗️ <b>Для получения первой конфигурации Вам необходимо продлить подписку</b>"
         },
 
         "keyboard_buttons": {
