feat(admin): add ability to interact with dbms

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -250,6 +250,12 @@
             "error_too_many_flags": "Флаги введены неверно, их слишком много!",
             "error_bad_protocol": "Протокол введен неверно!",
             "error_bad_location": "Локация введена неверно!",
+            "sql_query_enter_password": "Введите пароль от базы данных",
+            "sql_query_correct_password": "🔥 Отлично, пароль введен верно! Теперь введите SQL-запрос!",
+            "sql_query_wrong_password": "Пароль введен неверно!",
+            "sql_query_tables_row": "{0}. <code>{1}</code>\n",
+            "sql_query_tables_list": "Список всех таблиц базы данных <b>{0}</b>:\n\n{tables_names_str}",
+            "sql_query_error": "Произошла ошибка: {0}",
             "clients_info": "🚀 Вывожу информацию обо всех клиентах!",
             "clients_info_sub_active": "✅  ",
             "clients_info_sub_inactive": "❌  ",
@@ -266,6 +272,7 @@
         "keyboard_buttons": {
             "sql_insert_config": "SQL конфиг\n👾",
             "sql_insert_client": "SQL клиент\n👾",
+            "sql_query": "SQL запрос\n👾",
             "get_file_id": "ID файла\n👾",
             "send_message": "Отправить сообщение\n👾",
             "clients_info": "О клиентах\n👾",
