feat(admin): add ability to check logs via bot

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -277,6 +277,7 @@
             "send_message": "Отправить сообщение\n👾",
             "clients_info": "О клиентах\n👾",
             "show_earnings": "Заработок\n👾",
+            "show_logs": "Логи\n👾",
             "reset_fsm_1": "Сброс FSM\n👾",
             "send_message_everyone": "Отправить всем\n👾",
             "send_message_selected": "Отправить избранным\n👾",
