--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -229,7 +229,7 @@
         "messages": {
             "reset_fsm_keyboard": "<i>Сброс машинного состояния и клавиатуры</i>",
             "fsm_start": "<i>Активировано машенное состояние</i>",
-            "admin_kb_info": "Для вызова данного меню используйте /admin.\b\bДоступные команды:\n\n/fileid (/fid)\n/sql_user\n/sql_config",
+            "admin_kb_info": "Для вызова данного меню используйте /admin.\b\bДоступные команды:\n\n/fileid (/fid)\n/sql_user\n/sql_config\n/clients\n/configs <i>telegram_id</i> | <i>username</i>",
             "go_send_message_menu": "<i>Перехожу в меню отправки сообщений пользователям</i>",
             "message_everyone_info": "Введите необходимую информацию следующим сообщением, а также приложите файлы при необходимости!\n\nВведите /perfect, чтобы подтвердить выбор последнего отправленного сообщения!",
             "clients_row_str": "{0}. {1} {2} {3} <code>{4}</code>\n",
@@ -244,7 +244,7 @@
             "sql_insert_client_info": "Перешлите мне сообщение, и я выведу всю возможную информацию!",
             "cant_read_user": "К сожалению, не могу прочитать информацию о пользователе 😭",
             "sql_insert_config_info": "Пришлите мне сообщение в формате (вместо переноса строк используются пробелы):\n\n<b>client_id</b> - client_username | client_telegram_id\n<b>protocol_id</b> - <code>w</code> (WireGuard) | <code>x</code> (XTLS-Reality) | <code>s</code> (ShadowSocks)\n<b>location_id</b> - <code>n</code> (Netherlands) | <code>l</code> (Latvia) | <code>g</code> (Germany) | <code>u</code> (USA)\n<b>os</b> - <code>Android</code> | <code>IOS</code> | <code>Windows</code> | <code>Linux</code>\n<b>date_of_receipt</b> - дата получения конфигурации в формате <code>YYYY-MM-DD HH-MI</code>\n<b>link</b> - если вместо фото или файла *.conf нужна ссылка для XTLS/SS для ПК\n\n<b>Не забываем прикрепить файл, если требуется!</b>",
-            "sql_insert_config_check_config_info": "Кстати, проверить, какие конфигурации доступны пользователю можно командой\n/check_configs <i>telegram_id</i> | <i>username</i>",
+            "sql_insert_config_check_config_info": "Кстати, проверить, какие конфигурации доступны пользователю можно в админском меню командой\n/configs <i>telegram_id</i> | <i>username</i>",
             "error_not_enough_flags": "Флаги введены неверно, их слишком мало!",
             "error_bad_attachment": "Вы не приложили файл, либо добавили неверный тип вложения!",
             "error_too_many_flags": "Флаги введены неверно, их слишком много!",
