--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -363,7 +363,8 @@
             "authorized_only": "👾 Упс! Эта функция доступна только зарегистрированным пользователям!",
             "unauthorized_only": "Вы уже зарегистрировались!",
             "admin_only": "👾 Ой-ой! Эта функция доступна только администратору!",
-            "antiflood": "🤖 Пожалуйста, не спамьте запросами!"
+            "antiflood": "🤖 Пожалуйста, не спамьте запросами!",
+            "nonblank_only": "👾 Эх! Эта функция доступна только клиентам с активированной подпиской!"
         },
 
         "keyboard_buttons": {
