--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -118,6 +118,10 @@
             "local_promo_row_str": "{0}. <code>{1}</code> на {2} дней подписки.\nВведен {3}.\n",
             "no_promo_entered": "Вы еще не вводили ни одного промокода. Следите за новостями! 🚀",
             "config_was_received": "✨ <b>Ура, конфигурация получена!</b>",
+            "sub_expired": "👾 <b>Ой-ой! Срок действия подписки истек, VPN придется отключить</b>\n\nНадеемся, что это временно, и Вы обязательно к нам вернетесь! ♥️",
+            "sub_expires_1d": "👾 <b>Уведомляю: срок действия подписки истекает через 1 день</b>\n\nНе забудьте продлить подписку!\n\n<tg-spoiler><i>Напоминание можно отключить, перейдя в «Личный кабинет» — «Настройки» — «Уведомления».</i></tg-spoiler>",
+            "sub_expires_3d": "👾 <b>Уведомляю: срок действия подписки истекает через 3 дня</b>\n\nНе забудьте продлить подписку!\n\n<tg-spoiler><i>Напоминание можно отключить, перейдя в «Личный кабинет» — «Настройки» — «Уведомления».</i></tg-spoiler>",
+            "sub_expires_7d": "👾 <b>Уведомляю: срок действия подписки истекает через 7 дней</b>\n\nНе забудьте продлить подписку!\n\n<tg-spoiler><i>Напоминание можно отключить, перейдя в «Личный кабинет» — «Настройки» — «Уведомления».</i></tg-spoiler>",
             "instructions": {
                 "wireguard":
                 {
@@ -266,7 +270,11 @@
             "send_configuration_info": "Пришлите мне сообщение в формате (вместо переноса строк используйте пробелы):\n\n<b>protocol</b> — <code>wireguard/wg/w</code> | <code>xtls-reality/xtls/reality/x</code> | <code>shadosocks/ss/s</code>\n<b>location</b> — <code>netherlands/n</code> | <code>latvia/l</code> | <code>germany/g</code> | <code>usa/u</code>\n<b>os</b> — <code>android</code> | <code>ios</code> | <code>windows</code> | <code>macos/mac</code> | <code>linux</code>\n<b>link</b> — если вместо фото или файла *.conf нужна ссылка для XTLS/SS для ПК\n\n<b>Не забываем прикрепить файл, если требуется!</b>",
             "config_was_sent": "Отлично, конфигурация типа <b>{0}</b> отправлена!",
             "error_bad_flags_number": "Ошибка: {0}\nСкорее всего, вы указали неверное число флагов!",
-            "error_unrecognized": "Ошибка: {0}"
+            "error_unrecognized": "Ошибка: {0}",
+            "sub_expired": "👾 <b>Срок действия подписки пользователя истек. Отключите его конфигурации (всего их {0})!</b>\n\n<b>Client ID</b>: <code>{1}</code>\n<b>Telegram INFO</b>:{2} <code>{3}{4}</code> <code>{5}</code>",
+            "sub_expires_1d": "👾 <b>Срок действия подписки пользователя истекает через 1 день.</b>\n\n<b>Client ID</b>: <code>{0}</code>\n<b>Telegram INFO</b>:{1} <code>{2}{3}</code> <code>{4}</code>",
+            "sub_expires_3d": "👾 <b>Срок действия подписки пользователя истекает через 3 дня.</b>\n\n<b>Client ID</b>: <code>{0}</code>\n<b>Telegram INFO</b>:{1} <code>{2}{3}</code> <code>{4}</code>",
+            "sub_expires_7d": "👾 <b>Срок действия подписки пользователя истекает через 7 дней.</b>\n\n<b>Client ID</b>: <code>{0}</code>\n<b>Telegram INFO</b>:{1} <code>{2}{3}</code> <code>{4}</code>"
         },
 
         "keyboard_buttons": {
