feat(loc): update payment info message

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -332,7 +332,7 @@
     {
         "messages": {
             "wait_payment": "<b>Ожидаю оплаты подписки!</b>",
-            "payment_form": "💳 Информация об оплате:\n\n<b>Тип подписки</b>: {0}\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n<b>Продление на срок</b>: {1} мес.\n\nИдентификатор платежа: #{3}",
+            "payment_form": "💳 <b>Информация об оплате</b>:\n\n<b>Тип подписки</b>: {0}\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n<b>Продление на срок</b>: {1} мес.\n\nИдентификатор платежа: #{3}\n\n💫 Используйте кнопку «Проверить оплату» для проверки совершенного платежа",
             "config_info": "{link_str}<b>Создана</b>: {0}\n{platform_str}<b>Протокол</b>: {1}\n<b>Локация VPN</b>: {2}, {3}, скорость до {4} Мбит/с, ожидаемый пинг {5} мс.",
             "config_request_new_client": "👾 <b>Запрос на подключение от нового пользователя!</b>\n\n<b>Client ID</b>: <code>{6}</code>\n<b>Telegram INFO</b>:{1} <code>{0}</code> <code>{2}</code>\n<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT\n<b>Реферальный промокод</b>: {ref_promo_str}",
             "config_request_new_client_no_ref_promo_str": "Пользователь не использовал промокод, конфигурацию можно отправить <b>ТОЛЬКО ПОСЛЕ ОПЛАТЫ ПОДПИСКИ ИЛИ ВВОДА ПРОМОКОДА</b>\n",
